--- a/email.tmpl
+++ b/email.tmpl
@@ -1,3 +1,7 @@
+Subject: Welcome to Our Newsletter, {{.Name}}!
+MIME-Version: 1.0
+Content-Type: text/html; charset=UTF-8
+
 <!DOCTYPE html>
 <html>
 <head>
